--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/.gitignore
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/.gitignore
@@ -1,3 +1,6 @@
+# Aquí se encuentran las traducciones estos archivos se han de incluir
+!.dart_tool/flutter_gen/gen_l10n
+
 # Miscellaneous
 *.class
 *.log
