Arreglado package programa

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/pubspec.yaml
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/pubspec.yaml
@@ -1,4 +1,4 @@
-name: crea_empresa_usario
+name: crea_empresa_usuario_multi_idioma
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
