--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/pubspec.yaml
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/pubspec.yaml
@@ -53,7 +53,9 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "images/logo_final_radial.jpg"
+  image_path: "images/icono.png"
+  adaptative_icon_background: "#ffffff"
+  adaptative_icon_foreground: "images/icono.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
